--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -19,6 +19,7 @@
 @import "2_atoms/chat-bubble"
 @import "2_atoms/buttons"
 @import "2_atoms/close-btn"
+@import "2_atoms/search-input"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
