--- a/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
@@ -19,7 +19,7 @@ each item, i in self.getItems()
         else
             +UserName(item)
         .right
-            +ActionLinkButton('message', 'sendToPerson', null, item.getId(), item.getFirstName(), item.getLastName()).message-button.blue-gradient-btn Message
+            +ActionButton('message', 'sendToPerson', null, item.getId(), item.getFirstName(), item.getLastName()).message-button.blue-button Message
         .clear-fix
 
 
