--- a/Chalkable.Web/assets/jade/activities/people/UsersList.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersList.jade
@@ -2,17 +2,17 @@
 -selectedIndex = self.getSelectedIndex();
 .people-list-container.not-transparent
     .buttons
-        .right
-            BUTTON.total-count= self.getTotalText()
+        BUTTON.total-count= self.getTotalText()
 
     .buttons.filter
         .left
-            .buttons-group
-                BUTTON(class=self.isByLastName()?"":"pressed", data-value="false") First name
-                BUTTON(class=self.isByLastName()?"pressed":"", data-value="true") Last name
             input(type="hidden", name="byLastName", value=(self.isByLastName() ? 'true' : 'false'))
-        .right
-            input(placeholder='Filter list...', name="filter", value=self.getFilter()).people-search
+            .buttons-group
+                BUTTON(class=self.isByLastName()?"":"pressed", data-value="false").first-last First name
+                BUTTON(class=self.isByLastName()?"pressed":"", data-value="true").first-last Last name
+        .right.wrapper
+            input(type="text", placeholder='Filter list...', name="filter", value=self.getFilter()).people-search.search-input
+            .search-glass
             .people-search-imgs
                 label.people-search-img
                 label.people-search-close.opacity0
