--- a/Chalkable.Web/assets/sass2/2_atoms/_buttons.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_buttons.sass
@@ -17,6 +17,7 @@
 
 
 .buttons-group
+  display: inline-block
   button, input[type=button], input[type=submit], input[type=reset]
     border-radius: 0
 
