--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -10,5 +10,6 @@
 @import "4_pages/my-apps-page"
 @import "4_pages/app-market-details"
 @import "4_pages/students-list"
+@import "4_pages/message-list-page"
 
 @import "5_dialogs/add-standards-dialog"
