--- a/Chalkable.Web/assets/sass2/3_molecules/_calendar.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_calendar.sass
@@ -31,6 +31,7 @@
     display: table
     width: 100%
     border-collapse: collapse
+    line-height: 36px
 
   .calendar-body
     text-align: center
