--- a/Chalkable.Web/assets/jade/activities/messages/MessageList.jade
+++ b/Chalkable.Web/assets/jade/activities/messages/MessageList.jade
@@ -6,7 +6,7 @@ h2.page-title Messages
     input(name="inbox", type="hidden", value=self.isInbox())
 
     .right.wrapper
-        input(name="keyword", type="text", value=self.getKeyword(), placeholder="Type keyword...")#keyword.search-input
+        input(name="keyword", type="text", value=self.getKeyword(), placeholder="Filter list...")#keyword.search-input
         .search-glass
 .action-bar
     .items
