--- a/Chalkable.Web/assets/sass2/2_atoms/_chat-bubble.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_chat-bubble.sass
@@ -23,3 +23,9 @@
     +rotate(-45deg)
     top: -7px
     left: 17px
+
+  &.bottom::before
+    +rotate(135deg)
+    top: auto
+    bottom: -7px
+    left: 17px
