--- a/Chalkable.Web/assets/sass2/4_pages/_message-list-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_message-list-page.sass
@@ -2,6 +2,10 @@
   .buttons, .action-bar
     margin-bottom: 24px
 
+  > FORM
+    position: relative
+    z-index: 1
+
   .row
     border: 1px solid #c8c7c3
     border-radius: 5px
