--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -11,5 +11,6 @@
 @import "4_pages/app-market-details"
 @import "4_pages/students-list"
 @import "4_pages/message-list-page"
+@import "4_pages/summary-page"
 
 @import "5_dialogs/add-standards-dialog"
