--- a/Chalkable.Web/assets/sass2/0_ephir/_body.sass
+++ b/Chalkable.Web/assets/sass2/0_ephir/_body.sass
@@ -13,6 +13,13 @@ body
   visibility: none
   opacity: 0
 
+.x-zero
+  position: absolute
+  z-index: 0
+  width: 0
+  height: 0
+  opacity: 0
+
 .wrapper
   position: relative
 
