--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -20,6 +20,7 @@
 @import "2_atoms/buttons"
 @import "2_atoms/close-btn"
 @import "2_atoms/search-input"
+@import "2_atoms/combo-box"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
@@ -31,6 +32,7 @@
 @import "3_molecules/dialog"
 @import "3_molecules/loader-container"
 @import "3_molecules/calendar"
+@import "3_molecules/people-list"
 
 @import "6_popups/list-new-popup"
 
