--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -12,5 +12,6 @@
 @import "4_pages/students-list"
 @import "4_pages/message-list-page"
 @import "4_pages/summary-page"
+@import "4_pages/class-list-page"
 
 @import "5_dialogs/add-standards-dialog"
