--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -1,63 +1,81 @@
 mixin SummaryInfo(presentCount, allStudentsCount)
     -presentPersent = Math.round((presentCount * 100) / allStudentsCount)
     .summary-info
-        .title= presentCount + '/' + allStudentsCount + ' ' + Msg.Present.toUpperCase()
+        .title= presentCount + '/' + allStudentsCount + ' ' + Msg.Present
         .slide-bar
             div(style="width: " + presentPersent + "%").inner-bar
 
+h2.page-title Attendance
 
+-var topData = self.getTopData()
+-var topItems = topData.getTopItems()
+-var selectedId = topData.getSelectedItemId()
+-var valuesEnum = chlk.models.attendance.AttendanceTypeEnum
+-var additionalParams = self.getAdditionalParams()
+
+.action-bar
+    .items
+        +ActionLink('attendance', 'classList', selectedId).pressed=Msg.List
+        +ActionLink('attendance', 'seatingChart', selectedId, self.getDate().toStandardFormat())=Msg.Seating_Chart
+.loader
 .students-list.loader-container
-    topData = self.getTopData()
-    topItems = topData.getTopItems()
-    selectedId = topData.getSelectedItemId()
-    valuesEnum = chlk.models.attendance.AttendanceTypeEnum
-    additionalParams = self.getAdditionalParams()
     if(self.hasLeftRightToolBar())
         +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'attendance', 'classList')(
             selectedItemId=selectedId ? selectedId.valueOf() : "",
             disabledClass = 'x-hidden'
         ).classes-bar
-    .loader
-    .action-bar.not-transparent.buttons
-        .container.panel-bg
-            .left.no-border
-                +ActionLinkList(self.getLinksDataForLeftSide())
-                +DatePicker('attendanceDate', self.getDate())(
-                    data-options={
-                        showOtherMonths: true,
-                        selectOtherMonths: true,
-                        inCurrentMp: true
-                    },
-                    data-controller= "attendance",
-                    data-action="classList",
-                    data-params=selectedId ? [selectedId.valueOf()].concat(additionalParams) : null
-                )#attendance-date.tb-date-picker
-            .right
-                +ActionLink('attendance', 'classList', selectedId).pressed=Msg.List
-                +ActionLink('attendance', 'seatingChart', selectedId, self.getDate().toStandardFormat())=Msg.Seating_Chart
-                //+ActionLinkList(self.getLinksDataForRightSide())
+    if self.getItems().length == 0
+        .heaader.table
+            .container.panel-bg
+                .left.no-border
+                    +DatePicker('attendanceDate', self.getDate())(
+                        data-options={
+                            showOtherMonths: true,
+                            selectOtherMonths: true,
+                            inCurrentMp: true
+                        },
+                        data-controller= "attendance",
+                        data-action="classList",
+                        data-params=selectedId ? [selectedId.valueOf()].concat(additionalParams) : null
+                    )#attendance-date.tb-date-picker
+
     if self.getItems().length > 0
         .people-list-container.not-transparent
             .saved-pop-up
             .not-saved-pop-up
-            +ActionForm('attendance', 'setClassAttendanceList').set-attendance-list-form
+            +ActionForm('attendance', 'setClassAttendanceList').set-attendance-list-form.header
                 input(name="attendancesJson", type="hidden")
                 +Hidden('date', self.getDate().toStandardFormat())
                 +Hidden('classList', true)
                 +Hidden('classId', selectedId && selectedId.valueOf())
                 items = self.getItems()
-                .top.panel-bg
-                    +SummaryInfo(self.getPresentStudents().length, items.length)
-                    if self.canPost()
-                        A#submit-attendance-button.chlk-button.action-button.message-button.blue-gradient-btn POST IT
-                    else
-                        if self.getReadOnlyReason()
-                            div=self.getReadOnlyReason()
-                    if(self.getItems().length > 0 && self.canPost())
-                        +ActionLinkWithPrepend('attendance', 'markAll',
+                .table
+                    .l: +SummaryInfo(self.getPresentStudents().length, items.length)
+                    if self.getItems().length > 0 && self.canPost()
+                        .l &nbsp;
+                    .title
+                        = self.getDate().toString('MM dd, yy')
+                        +DatePicker('attendanceDate', self.getDate())#attendance-date.tb-date-picker.tr(
+                            data-options={
+                                showOtherMonths: true,
+                                selectOtherMonths: true,
+                                inCurrentMp: true
+                            },
+                            data-controller= "attendance",
+                            data-action="classList",
+                            data-params=selectedId ? [selectedId.valueOf()].concat(additionalParams) : null
+                        )
+                    if self.getItems().length > 0 && self.canPost()
+                        .r
+                            +ActionLinkWithPrepend('attendance', 'markAll',
                             [selectedId.valueOf(), self.getDate().toStandardFormat()].concat(additionalParams)
-                        )#all-present-link=Msg.Mark_all_Present
-                .action-bar.buttons.filter
+                            )#all-present-link=Msg.Mark_all_Present
+                    .r
+                        if self.canPost()
+                            BUTTON#submit-attendance-button.blue-button POST IT
+                        else if self.getReadOnlyReason()
+                            div=self.getReadOnlyReason()
+                .action-bar.buttons.filter.x-hidden
                     .container.panel-bg
                         .left
                             +ActionLinkWithPrepend('attendance', 'sortStudents', ['false'].concat(additionalParams))(class=self.isByLastName()?"":"pressed").action-button.first-last=Msg.First_name
@@ -68,28 +86,26 @@ mixin SummaryInfo(presentCount, allStudentsCount)
                     each item, i in self.getItems()
                         needPresent = (i == 0 && item.getType() == valuesEnum.NA.valueOf());
                         .row(index=i)
+                            .student-attendance-container.right
+                                len = self.getItems().length;
+                                if (needSuggestion && (i== 5 || (i == len - 1 && len < 6 && len > 2)))
+                                    .keyboard-suggestion
+                                div(class="container-" + item.getStudentId().valueOf())
+                                    -item.setReasons(self.getReasons());
+                                    +RenderWith(item, self.getItemClassType())(
+                                        needPresent = needPresent
+                                    )
                             if needPresent
                                 -item.setType(valuesEnum.PRESENT.valueOf());
                             student = item.getStudent();
                             +ProfileLink(student, 'student').left.image-container.white.shadow
                                 +PersonImg(student, 47)
-                            div.p.left
-                                .user-name-container.i-b.relative
-                                    SPAN.name=student.getFullName()
-                                    if student.isWithdrawn()
-                                        div(data-tooltip=Msg.Withdrawn).withdrawn
+                            .user-name-container.i-b.relative
+                                SPAN.name=student.getFullName()
+                                if student.isWithdrawn()
+                                    div(data-tooltip=Msg.Withdrawn).withdrawn
                                 if item.isAbsentPreviousDay()
                                     SPAN(data-tooltip=Msg.Absent_yesterday).absent-yesterday
-                            .right
-                                .student-attendance-container
-                                    len = self.getItems().length;
-                                    if (needSuggestion && (i== 5 || (i == len - 1 && len < 6 && len > 2)))
-                                        .keyboard-suggestion
-                                    div(class="container-" + item.getStudentId().valueOf())
-                                        -item.setReasons(self.getReasons());
-                                        +RenderWith(item, self.getItemClassType())(
-                                            needPresent = needPresent
-                                        )
-                            .clear
+                            .clear-fix
     else
         .black-arrow.no-class-scheduled=Msg.No_class_scheduled(self.getDate().format('mm/dd/yy'))
