--- a/Chalkable.Web/assets/sass2/2_atoms/_buttons.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_buttons.sass
@@ -1,5 +1,5 @@
 .buttons
-  button, input[type=button], input[type=submit], input[type=reset]
+  button, input[type=button], input[type=submit], input[type=reset], .button-like
     line-height: 25px
     padding: 0 13px
 
@@ -18,8 +18,9 @@
 
 .buttons-group
   display: inline-block
-  button, input[type=button], input[type=submit], input[type=reset]
+  button, input[type=button], input[type=submit], input[type=reset], .button-like
     border-radius: 0
+    display: inline-block
 
     &:first-child
       border-top-left-radius: 3px
