--- a/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
@@ -119,16 +119,6 @@
   .grades-individual
     border: 1px solid #c8c7c3
 
-    .row
-      border-bottom: 1px solid #e7e6e2
-      padding: 15px
-      z-index: 8
-      position: relative
-
-      &.selected
-        +box-shadow(transparentize(#000, .82) 0 0 5px)
-        z-index: 10
-
     .attachments-container
       display: none
       background: #f7f7f5
@@ -160,7 +150,6 @@
   .name-block
     position: relative
     width: 100%
-    line-height: 47px
 
     A
       text-decoration: none
@@ -189,7 +178,6 @@
   .grade-block
     position: relative
     width: 100px
-    line-height: 47px
 
     .text-value
       color: #2f7790
@@ -218,6 +206,8 @@
       font-size: 12px
       width: 85px
       text-align: center
+      z-index: -1
+      pointer-events: none
 
   .loading .grade-block .text-value
     font-size: 0
