--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -13,5 +13,6 @@
 @import "4_pages/message-list-page"
 @import "4_pages/summary-page"
 @import "4_pages/class-list-page"
+@import "4_pages/seating-chart-page"
 
 @import "5_dialogs/add-standards-dialog"
