--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
@@ -24,26 +24,6 @@ h2.page-title Attendance
         +ActionLink('attendance', 'classList', selectedId, self.getDate().toStandardFormat())= Msg.List
         +ActionLink('attendance', 'seatingChart', selectedId, self.getDate().toStandardFormat()).pressed= Msg.Seating_Chart
 
-.buttons
-    if self.isScheduledInMp()
-        if self.getColumns() == 0 || self.getRows() == 0
-            +UpdateGridForm(Msg.Create_grid, self.getRows(), self.getColumns(), 0, 0, selectedId.valueOf())
-            .black-arrow.start=Msg.Start_by_creating_a_grid
-        else
-            +UpdateGridForm(Msg.Edit_grid, self.getRows(), self.getColumns(), self.getMinData().rows, self.getMinData().columns, selectedId.valueOf())
-            .grey-button.add-remove-students= hasStudentOnChart ? Msg.Edit_students : Msg.Add_students
-            BUTTON(type="submit")#submit-chart.chlk-button.blue-gradient-btn=Msg.Save.toUpperCase()
-            .right.right-container.save-attendances-buttons
-                if showButtons
-                    A(class=self.getModel().hasSeatingStudents() ? "" : "disabled")#submit-attendance-button.chlk-button.action-button.message-button.blue-gradient-btn POST IT
-                    +ActionLink('attendance', 'markAll', selectedId.valueOf(), self.getDate().toStandardFormat(), false, true)(
-                        class=self.getModel().hasSeatingStudents() ? "" : "disabled"
-                    )#all-present-link=Msg.Mark_all_Present
-            if !hasStudentOnChart
-                .black-arrow.add= Msg.Add_your_students
-            else
-                .add
-
 +ActionForm('attendance', 'setClassAttendanceListFromSeatingChart').save-attendances-form
     +Hidden('date', self.getDate().format('mm/dd/yy'))
     +Hidden('classId', selectedId.valueOf()).class-id
@@ -52,6 +32,9 @@ h2.page-title Attendance
 div(class=showButtons ? 'can-post' : '').page-content.people-list-container
     .header
         +ActionForm('attendance', 'saveFromSeatingChart').save-chart-form.table
+            if showButtons
+                .l &nbsp;
+                .l &nbsp;
             .title
                 =self.getDate().toString('MM dd, yy')
                 +DatePicker('date', self.getDate())(
@@ -63,8 +46,28 @@ div(class=showButtons ? 'can-post' : '').page-content.people-list-container
                     data-controller= "attendance",
                     data-action="seatingChart",
                     data-params=selectedId ? [selectedId.valueOf()] : null
-                )#attendance-date.tb-date-picker
+                )#attendance-date.tb-date-picker.tr
                 +Hidden('seatingChartInfo', self.getTextForPost()).text-for-post
+            if showButtons
+                .r
+                    +ActionLink('attendance', 'markAll', selectedId.valueOf(), self.getDate().toStandardFormat(), false, true)(
+                        class=self.getModel().hasSeatingStudents() ? "" : "disabled"
+                    )#all-present-link=Msg.Mark_all_Present
+                .r
+                    BUTTON(class=self.getModel().hasSeatingStudents() ? "" : "disabled")#submit-attendance-button.blue-button POST IT
+    if self.isScheduledInMp()
+        .buttons
+            if self.getColumns() == 0 || self.getRows() == 0
+                +UpdateGridForm(Msg.Create_grid, self.getRows(), self.getColumns(), 0, 0, selectedId.valueOf())
+                BUTTON.black-arrow.start=Msg.Start_by_creating_a_grid
+            else
+                +UpdateGridForm(Msg.Edit_grid, self.getRows(), self.getColumns(), self.getMinData().rows, self.getMinData().columns, selectedId.valueOf())
+                .grey-button.add-remove-students= hasStudentOnChart ? Msg.Edit_students : Msg.Add_students
+                BUTTON(type="submit")#submit-chart.chlk-button.blue-gradient-btn=Msg.Save.toUpperCase()
+                if !hasStudentOnChart
+                    .black-arrow.add= Msg.Add_your_students
+                else
+                    .add
     seatingList = self.getSeatingList()
     if self.isScheduledInMp() && self.getColumns() * self.getRows() > 0
         .seating-chart-container
@@ -96,7 +99,8 @@ div(class=showButtons ? 'can-post' : '').page-content.people-list-container
                                 if info
                                     .empty-box.student-block.absolute
     else
-        .black-arrow.no-class-scheduled Selected class is not scaduled in current Term
+        .people-list
+            .black-arrow.no-class-scheduled.row Selected class is not scaduled in current Term
 typesEnum = chlk.models.attendance.AttendanceTypeEnum
 .chlk-pop-up-container.popup-top.seating-chart-popup
     .pop-up-triangle.big
