--- a/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
@@ -1,22 +1,23 @@
 mixin AbsentLatePage(data, header)
-    .chart-container
-        .chart-top-legend
-            each stat,i in data.getClassesStats()
-                clazz = stat.getClazz()
-                div(
-                    data-color=self.getColor(i),
-                    data-opacity-color=self.getColor(i, 0.2),
-                    data-index=i,
-                    data-id=clazz.getId()
-                ).legend-item.button-like
-                    text = clazz.getName() + ' ' + (clazz.getClassNumber() || '')
-                    div(style="background:" + self.getColor(i) + ";").box
-                    div(data-tooltip=text, data-tooltip-type="overflow").name=text
-        .chart-block.relative
-            .wide-chart-bg
-                +Chart()(
-                    data-options=self.getChartOptions(data)
-                ).main-chart
+    if data.getClassesStats().length
+        .chart-container
+            .chart-top-legend
+                each stat,i in data.getClassesStats()
+                    clazz = stat.getClazz()
+                    div(
+                        data-color=self.getColor(i),
+                        data-opacity-color=self.getColor(i, 0.2),
+                        data-index=i,
+                        data-id=clazz.getId()
+                    ).legend-item.button-like
+                        text = clazz.getName() + ' ' + (clazz.getClassNumber() || '')
+                        div(style="background:" + self.getColor(i) + ";").box
+                        div(data-tooltip=text, data-tooltip-type="overflow").name=text
+            .chart-block.relative
+                .wide-chart-bg
+                    +Chart()(
+                        data-options=self.getChartOptions(data)
+                    ).main-chart
     .students-container.relative
         items = self.getGroupedStudents(data.getStudents())
         each item,i in items
