fixed for CHLK-3258 Teacher. Discipline. When teacher types a "long text" in the "Occurrence Note", will be warning popup

--- a/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
@@ -72,5 +72,9 @@ redirectData = self.getRedirectData()
                             .discipline-desciption-container
                                 .title Occurrence Note:
                                 .notes-area-container
-                                    textarea(name='description', disabled=self.isAblePostDiscipline() && self.getSelectedTypeIds(item) ? undefined : "disabled").notes-area.change-discipline=item.getDescription()
+                                    textarea(
+                                        name='description',
+                                        disabled=self.isAblePostDiscipline() && self.getSelectedTypeIds(item) ? undefined : "disabled",
+                                        maxlength=500
+                                    ).notes-area.change-discipline=item.getDescription()
 
