fixed for CHLK-3225 [related with 53 891] After ending Grading Period, teacher can't add a student to the Seating Chart

--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -25,8 +25,7 @@ mixin SummaryInfo(presentCount, allStudentsCount)
                 +DatePicker('attendanceDate', self.getDate())(
                     data-options={
                         showOtherMonths: true,
-                        selectOtherMonths: true,
-                        inCurrentMp: true
+                        selectOtherMonths: true
                     },
                     data-controller= "attendance",
                     data-action="classList",
