--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
@@ -25,8 +25,7 @@ hasStudentOnChart = self.hasStudentOnChart()
                 +DatePicker('date', self.getDate())(
                     data-options={
                         showOtherMonths: true,
-                        selectOtherMonths: true,
-                        inCurrentMp: true
+                        selectOtherMonths: true
                     },
                     data-controller= "attendance",
                     data-action="seatingChart",
