--- a/Chalkable.Web/assets/sass2/3_molecules/_people-list.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_people-list.sass
@@ -20,6 +20,14 @@
     +text-shadow(transparentize(#fff, .5) 0 2px 1px)
 
 .people-list
+  .sub-row
+    display: none
+    background: #f7f7f5
+    border-bottom: 1px solid #c8c7c3
+    z-index: 1
+    position: relative
+    padding: 30px
+
   .row
     display: block
     line-height: 80px
