--- a/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
@@ -119,14 +119,6 @@
   .grades-individual
     border: 1px solid #c8c7c3
 
-    .attachments-container
-      display: none
-      background: #f7f7f5
-      border-bottom: 1px solid #c8c7c3
-      z-index: 7
-      position: relative
-
-
   .row:not(.readonly) .selected
     display: none
 
@@ -231,7 +223,7 @@
       margin-left: -7px
 
   .attachments-container
-    padding: 30px 10px 30px 30px
+    padding-right: 10px
 
   .comment-grade-container
     background: #f8e6a5
