--- a/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
@@ -1,43 +1,37 @@
 selectedId = self.getSelectedItemId()
 redirectData = self.getRedirectData()
 .students-list.loader-container
+    h2.page-title Discipline
     +LeftRightToolbar(self.getTopData().getTopItems(), chlk.templates.classes.TopBar, 'discipline', 'classList')(
         selectedItemId=selectedId ? selectedId.valueOf() : "",
         disabledClass = 'x-hidden'
     ).classes-bar
     .loader
-    .action-bar.not-transparent.buttons
-       .container.panel-bg
-           .left.no-border
-               +DatePicker('disciplineDate', self.getDate())(
-                   data-options={
-                       showOtherMonths: true,
-                       selectOtherMonths: true
-                   },
-                   data-controller= "discipline",
-                   data-action="classList",
-                   data-params=selectedId ? [selectedId.valueOf()] : null
-               )#discipline-date.tb-date-picker
+    .buttons
+        .buttons-group
+            +ActionButton('discipline', 'sortStudents', false)(class=self.isByLastName()?"":"pressed")= Msg.First_name
+            +ActionButton('discipline', 'sortStudents', true)(class=self.isByLastName()?"pressed":"")= Msg.Last_name
     .people-list-container.not-transparent
-        .top.panel-bg
-            span.total-count=self.getTotalText()
-        .action-bar.buttons.filter
-            .container.panel-bg
-                .left
-                    +ActionLink('discipline', 'sortStudents', false)(class=self.isByLastName()?"":"pressed").action-button=Msg.First_name
-                    +ActionLink('discipline', 'sortStudents', true)(class=self.isByLastName()?"pressed":"").action-button=Msg.Last_name
+        .header
+            .table
+                .l &nbsp;
+                .title
+                    =self.getDate().toString('MM dd, yy')
+                    +DatePicker('disciplineDate', self.getDate())(
+                        data-options={
+                            showOtherMonths: true,
+                            selectOtherMonths: true
+                        },
+                        data-controller= "discipline",
+                        data-action="classList",
+                        data-params=selectedId ? [selectedId.valueOf()] : null
+                    )#discipline-date.tb-date-picker.tr
+                .r.total-count=self.getTotalText()
         .grid-container.disciplines-individual.loader-container
             +ListView(self.getDisciplines())#class-attendance-list-panel.people-list
                 each item, i in self.getDisciplines()
                     .row(index=i)
                         student = item.getStudent();
-                        +ProfileLink(student, 'student').left.image-container.white.shadow
-                            +PersonImg(student, 47)
-                        div.p.left
-                            .user-name-container.i-b.relative
-                                SPAN.name=student.getFullName()
-                                if student.isWithdrawn()
-                                    div(data-tooltip=Msg.Withdrawn).withdrawn
                         .right
                             .short-discipline-info-block
                                 .status-block
@@ -48,7 +42,13 @@ redirectData = self.getRedirectData()
                                 div(data-tooltip=typesToolTip).with-discipline
                         .right.saving-block=Msg.Saving.toLowerCase()
                         .right.saved-block=Msg.Saved.toLowerCase()
-                    +ActionForm('discipline','setDiscipline')(style='display: none;').discipline-form-block
+                        +ProfileLink(student, 'student').image-container.white.shadow.left
+                            +PersonImg(student, 47)
+                        .user-name-container.i-b.relative
+                            SPAN.name=student.getFullName()
+                            if student.isWithdrawn()
+                                div(data-tooltip=Msg.Withdrawn).withdrawn
+                    +ActionForm('discipline','setDiscipline')(style='display: none;').discipline-form-block.sub-row
                         //input(name="disciplinesJson", type="hidden")
                         +Hidden('controller', redirectData.controller)
                         +Hidden('action', redirectData.action)
@@ -58,19 +58,18 @@ redirectData = self.getRedirectData()
                         +Hidden('studentId', item.getStudentId().valueOf())
                         +Hidden('classId', item.getClassId().valueOf())
                         +Hidden('date', self.getDate().toStandardFormat())
-                        .discipline-info
-                            +CheckboxList('disciplineTypeIds', 'disciplineTypeIds', self.getSelectedTypeIds(item)).discipline-types
-                                each column in self.getGroupDisciplineTypes(item)
-                                    if column.length > 0
-                                        .column
-                                            each discType in column
-                                                +LabeledCheckbox(
-                                                discType.disciplineTypeData.getName(),
-                                                    discType.disciplineTypeData.getId().valueOf().toString(),
-                                                    discType.selected,
-                                                    !self.isAblePostDiscipline()).change-discipline
+                        .discipline-info.table
+                            div
+                                +CheckboxList('disciplineTypeIds', 'disciplineTypeIds', self.getSelectedTypeIds(item)).discipline-types.table
+                                    each column in self.getGroupDisciplineTypes(item)
+                                        if column.length > 0
+                                            .column
+                                                each discType in column
+                                                    +LabeledCheckbox(
+                                                    discType.disciplineTypeData.getName(),
+                                                        discType.disciplineTypeData.getId().valueOf().toString(),
+                                                        discType.selected,
+                                                        !self.isAblePostDiscipline()).change-discipline
                             .discipline-desciption-container
-                                .title Occurrence Note:
-                                .notes-area-container
-                                    textarea(name='description', disabled=self.isAblePostDiscipline() && self.getSelectedTypeIds(item) ? undefined : "disabled").notes-area.change-discipline=item.getDescription()
+                                textarea(name='description', placeholder="Occurrence note...", disabled=self.isAblePostDiscipline() && self.getSelectedTypeIds(item) ? undefined : "disabled").notes-area.change-discipline=item.getDescription()
 
