fixed CHLK-3179: changed page size to 7

--- a/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
@@ -35,4 +35,4 @@ statusData = self.getStatusData()
             .today-work-panel
                 h2.stats=Msg.Classes
                 .classes-tb
-                    +LeftRightToolbar(user.getClassesSection(), chlk.templates.classes.Class)(hideArrows).centered.big-arrows
+                    +LeftRightToolbar(user.getClassesSection(), chlk.templates.classes.Class)(hideArrows, itemsCount = 7).centered.big-arrows
