fixed for CHLK-3177 [55 139] Teacher Testing Item 27 -Show class average on the grid for the activity when in the Box View the placeholder is there but nothing is populated

--- a/Chalkable.Web/assets/jade/activities/grading/GradingSummaryPopup.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingSummaryPopup.jade
@@ -3,8 +3,9 @@ div(class="announcement-popup-" + self.getId().valueOf())#chlk-pop-up-container.
     .grading-pop-up
         .separator.big-text=self.getTitle()
         .separator.small-text #{Msg.Due}: #{self.getExpiresDate().format('mm/dd/yy')}
-        .separator.small-text #{Msg.Class_average}: #{self.getAvg()}
+
         .grading-chart-container.small
+            .separator.small-text #{Msg.Class_average}: ...
             .chart-loader
         if self.isAnnOwner()
             +ActionLink('grading', 'unDropFromPopup', self.getId())(
