--- a/Chalkable.Web/assets/jade/activities/grading/PopupChart.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/PopupChart.jade
@@ -1,4 +1,5 @@
 configs = self.getGraphConfigs()
+.separator.small-text #{Msg.Class_average}: #{self.getClassAvg()}
 if configs
     +Chart()(data-options=configs, noExtends = true)
 
