fixed styling for student alert popup

--- a/Chalkable.Web/assets/sass/partials/controls/_avatar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_avatar.scss
@@ -103,7 +103,7 @@
   display: none;
   z-index: 99999999999;
   background: rgba(255, 255, 255, 0.9);
-  padding: 0 22px;
+  padding: 4px 10px 4px 0px;
   width: 268px;
   position: absolute;
   @include box-shadow(0 0 2px gray);
@@ -131,43 +131,47 @@
   }
 
   .alert-item{
-    height: 61px;
-    overflow: hidden;
     text-overflow: ellipsis;
-    padding-left: 38px;
     font: bold 14px Arial;
     color: #532f18;
-    background-position: 0 center;
-    background-repeat: no-repeat;
-
-    SPAN{
-      display: inline-block;
-      vertical-align: middle;
-
-      &.left-item{
-        height: 100%;
-      }
-    }
 
     &:not(:last-child){
       border-bottom: 1px solid #ebe6d9;
     }
 
-    &.internet{
-      background-image: url(images/icons/internet-alert.png);
+    .alert-icon{
+      display: inline-block;
+      vertical-align: middle;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 61px;
+      height: 61px;
+      &.internet{
+        background-image: url(images/icons/internet-alert.png);
+      }
+
+      &.medical{
+        background-image: url(images/icons/medical-alert.png);
+      }
+
+      &.special{
+        background-image: url(images/icons/bubble-alert.png);
+      }
+
+      &.sped{
+        background-image: url(images/icons/graduating-cap-alert.png);
+      }
     }
 
-    &.medical{
-      background-image: url(images/icons/medical-alert.png);
+    .alert-description{
+      display: inline-block;
+      vertical-align: middle;
+      padding: 6px 0;
+      width: 202px;
+      word-wrap: break-word;
     }
 
-    &.special{
-      background-image: url(images/icons/bubble-alert.png);
-    }
 
-    &.sped{
-      background-image: url(images/icons/graduating-cap-alert.png);
-    }
   }
 }
 
