--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -358,6 +358,7 @@ BODY {
     >A.logout{
       margin-top: 1px;
       opacity: 0;
+      height: 0;
       display: block;
       visibility: hidden;
       text-transform: capitalize;
