--- a/Chalkable.Web/assets/jade/controls/glance-box.jade
+++ b/Chalkable.Web/assets/jade/controls/glance-box.jade
@@ -20,7 +20,7 @@ mixin GlanceBox(controller, action, data, color, converter, useTooltip, inverse)
     else
         span(class="glance-box" + (data.items ? " hover-action-box" : ""))
             div
-                .value(class=self.getValueClass(data.value) + color ? ' ' + color : '') #{data.value || ''}
+                .value(class=self.getValueClass(data.value) + color ? ' ' + color : '') #{(data.value || data.value === 0) ? data.value : ''}
                 p.glance-title #{data.title}
                 if data.items
                     .details-container
